buildscript {
    dependencies {
        constraints {
            classpath ('org.apache.commons:commons-lang3:3.18.0') {
                because("previous versions have vulnerabilities")
            }
        }
    }
}

plugins {
    id "java"
    id 'checkstyle'
    id 'io.freefair.lombok' version '8.0.1'
    id 'org.springframework.boot' version '3.5.3'
}

group = 'com.epam.aidial'
version = "0.5.0-rc"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

bootJar {
    mainClass = 'com.epam.aidial.cfg.Application'
    manifest {
        attributes('Implementation-Title': 'ai-dial-admin-backend',
                'Implementation-Version': version)
    }
}

springBoot {
    buildInfo()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }

    // https://stackoverflow.com/questions/39615376/apache-jclouds-java-lang-nosuchmethoderror-when-using-rackspace-in-a-spring-boot
    configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
        resolutionStrategy {
            force 'com.google.code.gson:gson:2.8.9'
            force 'commons-beanutils:commons-beanutils:1.11.0'
        }
    }
}

checkstyle {
    toolVersion = "10.25.1"
    configDirectory = file("$rootProject.projectDir/checkstyle")
}

checkstyleMain.exclude '**/com/epam/aidial/core**'

repositories {
    mavenCentral()
}

dependencies {
    implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)

    // https://issues.apache.org/jira/browse/JCLOUDS-1637
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

    implementation 'org.apache.jclouds:jclouds-allblobstore:2.7.0'
    implementation 'org.apache.jclouds.api:filesystem:2.6.0'
    implementation 'com.amazonaws:aws-java-sdk-sts:1.12.663'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
    implementation 'com.azure:azure-identity:1.15.3'
    implementation 'com.azure:azure-security-keyvault-secrets:4.8.3'
    implementation 'org.springframework.vault:spring-vault-core:3.1.2'
    implementation 'software.amazon.awssdk:secretsmanager:2.30.27'
    implementation 'com.google.cloud:google-cloud-secretmanager:2.59.0'
    implementation 'com.google.guava:guava:33.4.8-jre'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.3.0'
    implementation 'org.springframework:spring-test'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.2.Final'
    implementation 'org.glassfish:jakarta.el:4.0.2'
    implementation 'com.networknt:json-schema-validator:1.5.2' //TODO: will become transitive dependency of core.config lib
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.apache.commons:commons-collections4:4.5.0-M3'
    implementation 'commons-validator:commons-validator:1.9.0'
    implementation 'commons-io:commons-io:2.18.0'
    implementation 'com.github.f4b6a3:uuid-creator:5.0.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.1'

    implementation 'org.mapstruct:mapstruct:1.6.0'

    implementation 'com.h2database:h2'
    implementation 'org.postgresql:postgresql:42.7.7'
    implementation 'com.microsoft.sqlserver:mssql-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.data:spring-data-envers'
    implementation 'org.flywaydb:flyway-core:11.4.1'
    implementation 'org.flywaydb:flyway-database-postgresql:11.4.1'
    implementation 'org.flywaydb:flyway-sqlserver:11.4.1'

    implementation 'io.fabric8:kubernetes-client:7.3.1'

    implementation 'com.influxdb:influxdb-client-java:7.2.0'

    implementation 'org.apache.commons:commons-csv:1.13.0'

    implementation platform('io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom:2.12.0')
    implementation 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter:2.12.0'

    implementation 'io.micrometer:micrometer-registry-prometheus'
//    implementation 'io.micrometer:micrometer-registry-otlp'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    implementation('org.springframework.boot:spring-boot-starter-log4j2') {
        exclude group: 'org.apache.logging.log4j'
    }
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.24.3'
    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
    implementation 'org.apache.logging.log4j:log4j-jul:2.24.3'
    implementation 'io.opentelemetry:opentelemetry-sdk'
    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
    implementation 'io.opentelemetry.instrumentation:opentelemetry-log4j-appender-2.17:1.33.6-alpha'

    implementation project(':query-language')

    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.0"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.3.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.apache.commons:commons-lang3:3.18.0'
    testImplementation 'io.jsonwebtoken:jjwt:0.9.1'
    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:4.1.0'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:mssqlserver'

    constraints {
        implementation ('org.apache.tomcat.embed:tomcat-embed-core:10.1.42') {
            because("previous versions have vulnerabilities")
        }
        implementation ('commons-fileupload:commons-fileupload:1.6.0') {
            because("previous versions have vulnerabilities")
        }
        implementation ('com.nimbusds:nimbus-jose-jwt:10.3.1') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.projectreactor.netty:reactor-netty-http:1.2.8') {
            because("previous versions have vulnerabilities")
        }
        testImplementation('org.apache.commons:commons-compress:1.27.1') {
            because("previous versions have vulnerabilities")
        }
        checkstyle ('org.apache.commons:commons-lang3:3.18.0') {
            because("previous versions have vulnerabilities")
        }
    }
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "-Werror"
}